Fixed css issues and Posting issue
Fixed issue with footer on HTML/CSS that caused image to be misaligned.

Fixed bug in registration form that caused a 403. (added th:action="@{/register}"

--- a/src/main/resources/static/css/register.css
+++ b/src/main/resources/static/css/register.css
@@ -22,15 +22,19 @@ body {
      align-items: center; 
      padding-bottom: 400px;
  }
-.section-3 {
+ .footer{
     display: flex;
-    align-items: center;
-    align-content: center;
-    align-self: center;
-} 
+    justify-content: center;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+}
 
  .inputFields{
      margin-bottom: 10px;
+     border-radius: 20px;
+     text-align: center;
  }
 
  
